<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/create_new"
          android:title="@string/new_line"
          android:icon="@drawable/ic_group_add"
          compat:showAsAction="always"  />
    <item android:id="@+id/settings"
          android:title="@string/options"
          android:icon="@drawable/ic_settings"
          compat:showAsAction="ifRoom"  />
    <item android:id="@+id/exit"
          android:title="@string/exit"
          android:icon="@drawable/ic_exit"
          compat:showAsAction="always"  />
    <item android:id="@+id/save"
          android:title="@string/save"
          android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha"
          compat:showAsAction="never"  />
    <item android:id="@+id/delete_menu"
          android:title="@string/remove"
          android:icon="@drawable/ic_delete_white_36dp"
          compat:showAsAction="never"  />
    <item android:id="@+id/sort_alfa"
          android:title="@string/sort_alfa"
          android:icon="@drawable/ic_settings"
          compat:showAsAction="never"  />
    <item android:id="@+id/sort_favo"
          android:title="@string/sort_favo"
          android:icon="@drawable/ic_settings"
          compat:showAsAction="never"  />
    <item android:id="@+id/fill"
          android:title="@string/add_example"
          android:icon="@drawable/ic_settings"
          compat:showAsAction="never"  />
</menu>